[package]
name = "dbd-auto-skillcheck-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.11", features = ["pipewire", "screencast", "tokio"] }
pipewire = "0.9.2"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
image = "0.25.5"
ash = "0.37.3"
libc = "0.2"
evdev = "0.13.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
rand = "0.8"
